# glop

./: .gitignore  README.md  README.rst  analyzer.py  build.ninja  compiled_grammar_parser.py  compiled_parser_base.py  compiler.py  glop  glop.g  grammar.py  grammar_analyzer.py  grammar_interp.py  grammar_printer.py  hand_rolled_grammar_parser.py  hand_rolled_grammar_parser_test.py  host.py  host_fake.py  interpreter.py  main.py  main_test.py  new_parser_base.py  omparser.py  omparser_test.py  parser.py  parser_base.py  parser_base_test.py  parser_test.py  pom.pom  pylintrc  pyproject.toml  regen  run  setup.py
benchmarks/: run.py
glop/: __init__.py  __main__.py  analyzer.py  box.py  compiled_grammar_parser.py  compiled_parser_base.py  compiler.py  grammar_printer.py  hand_rolled_grammar_parser.py  host.py  host_fake.py  interpreter.py  ir.py  lit.py  main.py  parser.py  parser_base.py  printer.py  python_templates.py  string_literal.py  tool.py  version.py
glop/fakes/: host_fake.py
glop/tests/: coverage_test.py  hand_rolled_grammar_parser_test.py  integration_test.py  main_test.py  parser_base_test.py  parser_test.py
grammars/: calc.fg  expr.g  floyd_data.fg  floyd_grammar.fg  glop.g  hello.g  json.fg  json5.fg  json5.g  ninja.fg  ninja.g  post_op.g  sample.ninja  unicode.g  var_expander.g
test_grammars/: glop.g  hello.g  json5.g  var_expander.g
tests/: arr.g  box_test.py  box_unittest.py  host_fake.py  host_test.py  main_test.py  printer_test.py  test.g  test.py  test2.g  test2.py  test3.g  test3.py  tool_test.py
utils/: pycombine.py  pycomp.py
(+34 files in other folders)
