[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glop"
description = "GLOP - Generalized Lpeg and OMeta-inspired parsing and printing frmework"
authors = [
    {name = "Dirk Pranke", email = "dpranke@chromium.org"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8"
classifiers= [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development :: Compilers',
    'Topic :: Software Development :: Interpreters',
    'Topic :: Text Processing :: Filters',
]
dynamic = [ "version" ]

[project.urls]
Repository = "https://github.com/dpranke/glop"
Issues = "https://github.com/dpranke/glop/issues"

[project.scripts]
glop = "glop.tool:main"

[tool.ruff]
include = [ "run", "*/*.py" ]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.setuptools]
packages = [ "glop" ]

[tool.setuptools.dynamic]
version = {attr = "glop.__version__"}
